--------------------------------------------------------------------------------
drkns 07.11.2022 20:19:16 +0000 - build 6046

1. Rework InfoPanel memory section.

2. Fix color processing.

--------------------------------------------------------------------------------
drkns 06.11.2022 23:58:52 +0000 - build 6045

1. Fix ECTL_SETSTRING crash when source and destination strings overlap.

2. Static analysis warnings.

--------------------------------------------------------------------------------
drkns 03.11.2022 20:43:44 +0000 - build 6044

1. Make "path" in "pushd path" optional.

--------------------------------------------------------------------------------
drkns 02.11.2022 21:24:55 +0000 - build 6043

1. Refactoring, move plarform-specific code around.

2. Refactoring, reorganize error checking.

--------------------------------------------------------------------------------
drkns 29.10.2022 18:00:05 +0100 - build 6042

1. Include PE & file timestamps into generated bug reports.

--------------------------------------------------------------------------------
drkns 15.10.2022 19:27:16 +0100 - build 6041

1. Add workaround for incorrect encoding in OS-generated CF_UNICODETEXT.
   See far:config, ClipboardUnicodeWorkaround.

2. Refactoring.

--------------------------------------------------------------------------------
pepak 13.10.2022 20:18:32 +0100 - build 6040

1. Add special symbols to refer to the left ("![") or to the right ("!]") panel.

--------------------------------------------------------------------------------
drkns 10.10.2022 18:06:05 +0100 - build 6039

1. Use the real window handle when running in Windows Terminal.
   This should fix some scenarios like taskbar progress, flashing, icon setting, Alt+F9 etc.
   It also may or may not break your Terminal, who knows.

--------------------------------------------------------------------------------
drkns 07.10.2022 23:13:59 +0100 - build 6038
